src/css/main.scss
// COLORS
$color-background: #1f1d2e;
$color-header-background: #191724;
$color-background-light: #f6f6f6;
$color-background-post: $color-background;
$color-background-post-light: #f6f6f6;
$color-current-line: #44475a;
$color-selection: #44475a;
$color-foreground: #e0def4;
$color-blue: #3e8fb0;
$color-blue-light: #286983;
$color-green: #9ccfd8;
$color-green-light: #56949f;
$color-pink: #c4a7e7;
$color-red: #eb6f92;
$color-red-dark: #b4637a; // a little strange here, I know!
$color-yellow: #f6c177;
$color-yellow-light: #ea9d34;
$color-bg-nav: #26233a;
$color-invert: #fff;
$color-invert-light: #000;
$color-faded: #bbb;
$color-faded-light: #555;
$color-faded-invert: $color-faded-light;
$color-faded-invert-light: $color-faded;

// FONTS
$font-main: "Poppins", Arial, Helvetica, sans-serif;
$font-main-var: "Poppins" var alt, Arial, Helvetica, sans-serif;
$font-heading: "Recoleta", Arial, Helvetica, sans-serif;
$font-code: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
$font-size: 1rem;
$font-color: #eee;
$font-color-light: #4b4b4b;
$font-color-darker: #f6f6f6;
$font-color-darker-light: #333;
$font-bold-color: #8cc8ff;
$font-bold-color-light: #222;
$font-bold-weight: 500;
$font-a: $color-yellow;
$font-a-light: #0b74cd;
$font-a-border: #ffd47985;
$font-a-border-light: #0b74cda6;
$a-hover: $color-invert;
$a-hover-light: $font-color-light;
$mark-color: #fff30026;
$mark-color-light: #fff096;

// GRIDS
$grid-xs: 350px;
$grid-sm: 576px;
$grid-md: 768px;
$grid-lg: 992px;
$grid-xl: 1200px;
$grid-xxl: 1600px;
$grid-w-normal: 900px;
$grid-w-ex-normal: 1200px;
$grid-toc: 1400px;
$padding-lr: 16px;
$margin-bottom: 1.5 * $font-size; // margin-bottom
$margin-bottom-code: 1.1 * $margin-bottom; // for code blocks
$padding-margin: 2rem;

// HEADINGs
$heading-font: $font-heading;
$heading-weight: 600;
$heading-color: #f0f0f0;
$heading-color-light: #3a3a3a;
$heading-h1-size: $font-size * 1.6;
$heading-h2-size: $font-size * 1.43; // h2's font size (in comparison with global $font-size)
$heading-h3-size: $heading-h2-size * 0.9; // h3's font size (in comparison with global h2)
$heading-h4-size: $heading-h3-size * 0.95; // h3's font size (in comparison with global h3)
@media (max-width: #{$grid-md - 1px}) {
  $heading-h1-size: $font-size * 1.71;
  $heading-h2-size: $font-size * 1.4;
  // $heading-h3-size: $heading-h2-size * 0.9;
  // $heading-h4-size: $heading-h3-size * 0.9;
}
$heading-numbering: true;
$mt-heading: $margin-bottom * 1.5; // margin-top heading
$margin-bottom-heading: $margin-bottom * 0.85; // margin-bottom heading
$heading-heading-minus-margin: -0.5rem;

// HEADER
$header-logo: 55px;

// OTHERS
$box-border-radius: 0.5rem;
$li-margin-bottom: 5px;

// CODE
$code-font-size: 0.9 * $font-size;
$inside-padding: 16px;
$pre-padding: $inside-padding;
$code-bg: #191724;
$code-bg-light: #fff;
$code-bd: #3b3e54;
$code-bd-light: #e4e2e2;
$code-max-height: 450px;
$code-inline-text: #fff;
$code-inline-text-light: #067b26;
// $code-inline-background: #6b444245;
$code-inline-background: #eeeeee21;
$code-inline-background-light: #ececec;
$code-inline-bd: 1px solid #444;
$code-inline-bd-light: 1px solid #ddd;
$code-border-radius: $box-border-radius;

// TOC
$toc-title: #f5d3a7;
$toc-title-light: $heading-color-light;
$toc-title-bd: #555;
$toc-title-bd-light: #ccc;
$toc-appendix: #a2a2a2;
$toc-appendix-light: #545454;
$fixed-top: 70px; // change to the same number in main.js (anchor link)

// BADGE
$badge-reading: #9cfea1;
$badge-reading-light: #15941c;
$badge-choice: #ff9fe4;
$badge-choice-light: #ac3b8c;

// DARK/LIGHT THINGS
$a-list-homepage: #ddd;
$a-list-homepage-light: $font-color-light;
$a-list-homepage-bd: rgba(255, 255, 255, 0.14);
$a-list-homepage-bd-light: #cacaca;
$filter-invert: invert(0);
$filter-invert-light: invert(1);
$badge-black-bg: #26233a;
$badge-black-bg-light: #f3f3f3;
$badge-black-bd: #444;
$badge-black-bd-light: #ddd;
$table-bg: #191724;
$table-bg-light: #e8e8e8;
$badge-green: #009023;
$badge-green-light: $color-green-light;
$badge-blue: #2f55c1;
$badge-blue-light: $badge-blue;
$scroll-thumb-bg: #4f5c98;
$scroll-thumb-bg-light: #ced4da;
$scroll-thumb-bg-hover: #aaa;
$scroll-thumb-bg-hover-light: #adb5bd;
$scroll-track: transparent;
$scroll-track-light: transparent;

// BOXES
// Follow Primer's color schemes: https://primer.style/css/support/color-system
// (--color-scale-*-4) for border, add "30" (light), "70" (dark) at the end for backgrounds
$alert-info-bg: #66a5ff24;
$alert-info-bd: #66a5ff;
$alert-info-bg-light: #5ca7ff30;
$alert-info-bd-light: #5ca7ff;

$alert-success-bg: #37c03e24;
$alert-success-bd: #37c03e;
$alert-success-bg-light: #34d05830;
$alert-success-bd-light: #34d058;

$alert-danger-bg: #e5534b24;
$alert-danger-bd: #e5534b;
$alert-danger-bg-light: #ff818e30;
$alert-danger-bd-light: #ff818e;

$alert-warning-bg: #f0ac1f24;
$alert-warning-bg-light: #ffcd0030;
$alert-warning-bd: #ffc04882;
$alert-warning-bd-light: #ffc048;

$alert-idea-bd: #ffc00870;
$alert-idea-bd-light: #ffc008;

$bg-hs-box: rgba(255, 255, 255, 0.05);
$bg-hs-box-light: rgba(255, 255, 255, 0.25);

// BLOG
$bg-blog-card: #26233a;
$bg-blog-card-light: $code-bg-light;
$post-gap: 1.5rem;
$min-blog-card-width: 250px;
$max-blog-card-width: 350px;
$min-blog-card-height: 10rem;
$blog-card-title-color: #dadada;
$blog-card-title-color-light: #555;


@import "./components/prism_variables";
@import "./components/mixin"; // mixsin
@import "./components/dark-light"; // dark / light mode
@import "./components/font";
@import "./components/main"; // init css
@import "./components/posts-list"; // for includes/components/postsList.njk
@import "./components/tooltip";
@import "./components/typography";
@import "./components/heading";
@import "./components/grid";
@import "./components/index"; // for home page
@import "./components/header";
@import "./components/nav";
@import "./components/footer";
@import "./components/about"; // for about page
@import "./components/component"; // all small components
@import "./components/texmath"; // markdown-it-texmath
@import "./components/blog";
@import "./components/post";
@import "./components/prism-vscode"; // with my custom
@import "./components/code";
@import "./components/toc";
@import "./components/img";

